# lidar_align

./: CMakeLists.txt  LICENSE  README.md  lidar_align_https.rosinstall  lidar_align_ssh.rosinstall  package.xml
cfg/: inital_calib.yaml
include/lidar_align/: aligner.h  icp.h  lidar_align.h  lidar_aligner.h  loader.h  multi_icp.h  rough_opt.h  sensors.h  t_grid.h  table.h  transform.h
launch/: lidar_align.launch  lidar_align_global.launch  lidar_align_local.launch
lidar_align/: CMakeLists.txt  NLOPTConfig.cmake  package.xml
lidar_align/include/lidar_align/: sensors.h  transform.h
lidar_align/launch/: lidar_align.launch
lidar_align/src/: loader.cpp  sensors.cpp
lidar_align_vis/: CMakeLists.txt  package.xml
lidar_align_vis/cfg/: calib.cfg
lidar_align_vis/include/lidar_align_vis/: calib_loader.h  lidar_align_server.h
lidar_align_vis/launch/: visualize_calibration.launch
lidar_align_vis/src/: calib_loader.cpp  lidar_align_server.cpp  lidar_align_vis_node.cpp
results/: calibration_z_desktop_14767_4515507952789855611.txt  lidar_points_z_desktop_14767_1956609863607506825.ply
src/: aligner.cpp  icp.cpp  lidar_align.cpp  lidar_align_node.cpp  lidar_aligner.cpp  loader.cpp  multi_icp.cpp  refine_opt.cpp  rough_opt.cpp  sensors.cpp  t_grid.cpp
