<?xml version="1.0"?>
<package format="2">
  <name>lidar_align</name>
  <version>0.0.0</version>
  <description>Aligns 3D lidars to a 6-dof pose source</description>

  <maintainer email="ztaylor@ethz.ch">Zachary Taylor</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
