<?xml version="1.0"?>
<package format="2">
  <name>lidar_align_vis</name>
  <version>0.0.0</version>
  <description>
    A tool for inspecting lidar extrinsic calibration.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <maintainer email="alex.millane@gmail.com">Alex Millane</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies. -->
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>lidar_align</depend>
  <depend>dynamic_reconfigure</depend>

</package>
